@@ -12,6 +12,8 @@
 - GDPR: Added ability to delete older appointments. You can setup how long presents appointments should be stored in database.
 - GDPR: Added checkbox with agreement to process personal data.
 - GDPR: Added plugin information to default "Private Policy" page during auto-creation of this page.
+- GDPR: Added ability to export user personal data.
+- GDPR: Added ability to erase user personal data.
 
 2018-xx-xx - 2.2.8
 -------------------------------
